Added PSAR & General Updates
