# swagger_server/models/__init__.py
@@ -6,4 +6,6 @@ from __future__ import absolute_import
 from swagger_server.models.bollinger import Bollinger
 from swagger_server.models.candlestick import Candlestick
 from swagger_server.models.ema import Ema
+from swagger_server.models.psar import Psar
+from swagger_server.models.psar_inner import PsarInner
 from swagger_server.models.sma import Sma
