# swagger_server/models/psar_inner.py
@@ -1,0 +1,167 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+import re  # noqa: F401,E501
+from swagger_server import util
+
+
+class PsarInner(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, _date: str=None, psarl: float=None, psars: float=None, psa_raf: float=None, psarr: int=None):  # noqa: E501
+        """PsarInner - a model defined in Swagger
+
+        :param _date: The _date of this PsarInner.  # noqa: E501
+        :type _date: str
+        :param psarl: The psarl of this PsarInner.  # noqa: E501
+        :type psarl: float
+        :param psars: The psars of this PsarInner.  # noqa: E501
+        :type psars: float
+        :param psa_raf: The psa_raf of this PsarInner.  # noqa: E501
+        :type psa_raf: float
+        :param psarr: The psarr of this PsarInner.  # noqa: E501
+        :type psarr: int
+        """
+        self.swagger_types = {
+            '_date': str,
+            'psarl': float,
+            'psars': float,
+            'psa_raf': float,
+            'psarr': int
+        }
+
+        self.attribute_map = {
+            '_date': 'Date',
+            'psarl': 'PSARl',
+            'psars': 'PSARs',
+            'psa_raf': 'PSARaf',
+            'psarr': 'PSARr'
+        }
+        self.__date = _date
+        self._psarl = psarl
+        self._psars = psars
+        self._psa_raf = psa_raf
+        self._psarr = psarr
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'PsarInner':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The psar_inner of this PsarInner.  # noqa: E501
+        :rtype: PsarInner
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def _date(self) -> str:
+        """Gets the _date of this PsarInner.
+
+
+        :return: The _date of this PsarInner.
+        :rtype: str
+        """
+        return self.__date
+
+    @_date.setter
+    def _date(self, _date: str):
+        """Sets the _date of this PsarInner.
+
+
+        :param _date: The _date of this PsarInner.
+        :type _date: str
+        """
+
+        self.__date = _date
+
+    @property
+    def psarl(self) -> float:
+        """Gets the psarl of this PsarInner.
+
+
+        :return: The psarl of this PsarInner.
+        :rtype: float
+        """
+        return self._psarl
+
+    @psarl.setter
+    def psarl(self, psarl: float):
+        """Sets the psarl of this PsarInner.
+
+
+        :param psarl: The psarl of this PsarInner.
+        :type psarl: float
+        """
+
+        self._psarl = psarl
+
+    @property
+    def psars(self) -> float:
+        """Gets the psars of this PsarInner.
+
+
+        :return: The psars of this PsarInner.
+        :rtype: float
+        """
+        return self._psars
+
+    @psars.setter
+    def psars(self, psars: float):
+        """Sets the psars of this PsarInner.
+
+
+        :param psars: The psars of this PsarInner.
+        :type psars: float
+        """
+
+        self._psars = psars
+
+    @property
+    def psa_raf(self) -> float:
+        """Gets the psa_raf of this PsarInner.
+
+
+        :return: The psa_raf of this PsarInner.
+        :rtype: float
+        """
+        return self._psa_raf
+
+    @psa_raf.setter
+    def psa_raf(self, psa_raf: float):
+        """Sets the psa_raf of this PsarInner.
+
+
+        :param psa_raf: The psa_raf of this PsarInner.
+        :type psa_raf: float
+        """
+
+        self._psa_raf = psa_raf
+
+    @property
+    def psarr(self) -> int:
+        """Gets the psarr of this PsarInner.
+
+
+        :return: The psarr of this PsarInner.
+        :rtype: int
+        """
+        return self._psarr
+
+    @psarr.setter
+    def psarr(self, psarr: int):
+        """Sets the psarr of this PsarInner.
+
+
+        :param psarr: The psarr of this PsarInner.
+        :type psarr: int
+        """
+
+        self._psarr = psarr
